# PromptAnywhere

./: .gitignore  AGENTS.md  README.md  prompt_anywhere.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  FINISHED.md  QT_ANIMATION_FLICKER_RESEARCH.md  SETUP.md  TODO.md
src/prompt_anywhere/: __init__.py  __main__.py
src/prompt_anywhere/common/: __init__.py  models.py
src/prompt_anywhere/core/: app.py  config.py  hotkey_manager.py
src/prompt_anywhere/core/agents/: __init__.py  base_agent.py  claude_agent.py  codex_agent.py  gemini_agent.py
src/prompt_anywhere/core/features/: __init__.py  base_feature.py  browser_feature.py  customize_feature.py  file_search_feature.py  google_search_feature.py  history_feature.py  maximize_chat_feature.py  screenshot_feature.py  terminal_feature.py
src/prompt_anywhere/core/utils/: platform_utils.py
src/prompt_anywhere/host/: __init__.py  api.py  main.py
src/prompt_anywhere/ui/: __init__.py  app.py
src/prompt_anywhere/ui/common/: __init__.py  assets.py  background.py  window_shape.py
src/prompt_anywhere/ui/services/: __init__.py  session_manager.py
src/prompt_anywhere/ui/styles/: __init__.py  theme_blue.py  theme_manager.py  theme_warm.py
src/prompt_anywhere/ui/widgets/: __init__.py  chat_bubble.py  feature_card.py  glowing_button.py
src/prompt_anywhere/ui/windows/: __init__.py  _code_block_utils.py  history_window.py  main_prompt_window.py  prompt_shell_window.py  prompt_window.py  result_window.py  result_window_actions.py  screenshot_overlay.py
tools/: drawer_jitter_probe.py
